@@ -1,3 +1,7 @@
+2005-12-29    <layer@OOB2>
+
+	* makefile: use mlisp w/o path
+
 2005-12-17    <layer@OOB2>
 
 	* makefile: use 8.0
